fix: improve headers' styling to make them more legible

--- a/src/components/ImageHeader/ImageHeader.module.scss
+++ b/src/components/ImageHeader/ImageHeader.module.scss
@@ -11,10 +11,12 @@
 }
 
 .pageHeader {
-  font-size: clamp(2rem, 5vw, 6rem);
-  letter-spacing: 0.4rem;
+  font-size: clamp(5rem, 5vw, 7rem);
   font-family: "AlegreyaSans", sans-serif;
+  letter-spacing: 0.4rem;
   margin-top: -5vw;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: hsla(0, 0%, 100%, 1);
 }
 
 .dotDivider {
@@ -23,5 +25,8 @@
 }
 
 .pageName {
-  font-size: clamp(1.1rem, 3vw, 3rem);
+  font-size: clamp(3rem, 2.5vw, 4.5rem);
+  font-family: "AlegreyaSans", sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: hsla(0, 0%, 100%, 0.66);
 }
